--- a/WEB/usa/choropleth.html
+++ b/WEB/usa/choropleth.html
@@ -40,9 +40,9 @@
     <h1 class="header">Team A Project</h1>
     <div class="search">
       <form action="/keyword-route" method="post">
+        <!-- This doesn nothing for now -->
         <input type="text" id="keyword" placeholder="Search Keywords..." />
         <button type="submit">Send</button>
-        <!-- This doesn nothing for now -->
       </form>
     </div>
     <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -60,14 +60,16 @@
           .attr("height", height);
 
         var projection = d3.geoAlbersUsa();
-        //.translate([width / 2, height / 2])
-        //.scale(500);
 
         var path = d3.geoPath().projection(projection);
 
+        var legend = d3
+          .scaleLinear()
+          .domain([1, 10])
+          .rangeRound([600, 860]);
+
         var color = d3
           .scaleLinear()
-          .domain([0, 50])
           .range(["white", "#1DA1F1"]) //go from white to twitter logo color
           .interpolate(d3.interpolateHcl);
         //sets colors such that white is the assigned to the lowest values and blue is assigned to the higher values with everything in between being assigned to everything in between.
@@ -75,6 +77,7 @@
         //create map and project data
         d3.json("/bigdata", function(data) {
           //Set input domain for color scale
+          console.log("data: ", data);
           max = 0;
           min = Infinity;
 
@@ -134,7 +137,7 @@
                   return color(value);
                 } else {
                   //If value is undefined…
-                  return "#ccc";
+                  return "white";
                 }
               });
           });
