--- a/WEB/usa/choropleth.html
+++ b/WEB/usa/choropleth.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -39,15 +40,10 @@
   <body class="map">
     <h1 class="header">Team A Project</h1>
     <div class="search">
-<<<<<<< HEAD
       <form action="http://localhost:3000/choropleth" method="POST">
         <input type="text" placeholder="Search Keywords..." name = "keyword" />
-=======
-      <form action="/keyword-route" method="post">
-        <!-- This doesn nothing for now -->
-        <input type="text" id="keyword" placeholder="Search Keywords..." />
->>>>>>> f04f99f31048f00237b94084e155110c3ae403bc
         <button type="submit">Send</button>
+        <!-- This doesn nothing for now -->
       </form>
     </div>
     <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -65,16 +61,14 @@
           .attr("height", height);
 
         var projection = d3.geoAlbersUsa();
+        //.translate([width / 2, height / 2])
+        //.scale(500);
 
         var path = d3.geoPath().projection(projection);
 
-        var legend = d3
-          .scaleLinear()
-          .domain([1, 10])
-          .rangeRound([600, 860]);
-
         var color = d3
           .scaleLinear()
+          .domain([0, 50])
           .range(["white", "#1DA1F1"]) //go from white to twitter logo color
           .interpolate(d3.interpolateHcl);
         //sets colors such that white is the assigned to the lowest values and blue is assigned to the higher values with everything in between being assigned to everything in between.
@@ -83,7 +77,6 @@
         d3.json("/bigdata", function(data) {
           console.log(data)
           //Set input domain for color scale
-          console.log("data: ", data);
           max = 0;
           min = Infinity;
 
@@ -97,7 +90,6 @@
               max = data[0][i];
             }
           }
-
           color.domain([min, max]);
 
           //Load in GeoJSON data
@@ -144,7 +136,7 @@
                   return color(value);
                 } else {
                   //If value is undefined…
-                  return "white";
+                  return "#ccc";
                 }
               });
           });
