heatmap displays latest tweets only

--- a/WEB/usa/choropleth.html
+++ b/WEB/usa/choropleth.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -41,7 +40,7 @@
     <h1 class="header">Team A Project</h1>
     <div class="search">
       <form action="http://localhost:3000/choropleth" method="POST">
-        <input type="text" placeholder="Search Keywords..." name = "keyword" />
+        <input type="text" placeholder="Search Keywords..." name="keyword" />
         <button type="submit">Send</button>
         <!-- This doesn nothing for now -->
       </form>
@@ -75,7 +74,7 @@
 
         //create map and project data
         d3.json("/bigdata", function(data) {
-          console.log(data)
+          console.log(data);
           //Set input domain for color scale
           max = 0;
           min = Infinity;
@@ -84,7 +83,6 @@
             tmp = data[0][i];
             if (data[0][i] < min) {
               min = data[0][i];
-
             }
             if (data[0][i] > max) {
               max = data[0][i];
