--- a/WEB/usa/choropleth.html
+++ b/WEB/usa/choropleth.html
@@ -68,7 +68,7 @@
         var color = d3
           .scaleLinear()
           .domain([0, 50])
-          .range(["white", "#1DA1F1"]) //go from white to twitter logo color
+          .range(["white", "blue"]) //"#1DA1F1" go from white to twitter logo color
           .interpolate(d3.interpolateHcl);
         //sets colors such that white is the assigned to the lowest values and blue is assigned to the higher values with everything in between being assigned to everything in between.
 
