--- a/WEB/usa/choropleth.html
+++ b/WEB/usa/choropleth.html
@@ -74,7 +74,7 @@
 
         //create map and project data
         d3.json("/bigdata", function(data) {
-          console.log(data);
+          console.log("data is " + data);
           //Set input domain for color scale
           max = 0;
           min = Infinity;
@@ -105,6 +105,7 @@
               var dataValue = parseFloat(data[0][i]);
 
               //Find the corresponding state inside the GeoJSON
+              console.log(json)
               for (var j = 0; j < json.features.length; j++) {
                 var jsonState = json.features[j].id;
 
