--- a/WEB/usa/choropleth.html
+++ b/WEB/usa/choropleth.html
@@ -39,7 +39,7 @@
   <body class="map">
     <h1 class="header">Team A Project</h1>
     <div class="search">
-      <form action="http://localhost:3000/choropleth" method="POST">
+      <form action="http://35.235.68.246:3000/choropleth" method="POST">
         <input type="text" placeholder="Search Keywords..." name="keyword" />
         <button type="submit">Send</button>
         <!-- This doesn nothing for now -->
@@ -105,7 +105,7 @@
               var dataValue = parseFloat(data[0][i]);
 
               //Find the corresponding state inside the GeoJSON
-              console.log(json)
+              console.log(json);
               for (var j = 0; j < json.features.length; j++) {
                 var jsonState = json.features[j].id;
 
